--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,11 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.14 - (March, 30 2016)
+- Core (22): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.14
+
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.13 - (March, 14 2016)
 - Core (16): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.13
 
