--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.0-beta2 - (March, 30 2016)
+- Core (25): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.0-beta2
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.0-beta - (February, 18 2016)
 
 CHANGELOG:
