--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.15- (April, 30 2016)
+- Core (8): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.15
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.14 - (March, 30 2016)
 - Core (22): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.14
 
