--- a/history.txt
+++ b/history.txt
@@ -27,7 +27,11 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
-VERSION 2.1.15- (April, 30 2016)
+VERSION 2.1.16- (April, 19 2016)
+- Core (10): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.16
+
+-----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.15- (April, 4 2016)
 - Core (8): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.15
 
 -----------------------------------------------------------------------------------------------------------------------------------
