releasing OrientDB 2.2.0-rc1

--- a/history.txt
+++ b/history.txt
@@ -26,6 +26,11 @@
 
 This document contains the last changes of OrientDB Community Edition.
 
+
+-----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.0-rc1 - (April, 27 2016)
+- Core (17): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.0-rc1
+
 -----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.0-beta2 - (March, 30 2016)
 - Core (25): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.0-beta2
