--- a/history.txt
+++ b/history.txt
@@ -27,7 +27,11 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
-VERSION 2.1.16- (May, 16 2016)
+VERSION 2.1.18- (May, 25 2016)
+- Core (27): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.18
+
+-----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.17- (May, 16 2016)
 - Core (25): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.17
 
 -----------------------------------------------------------------------------------------------------------------------------------
