--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.19- (Jun, 1 2016)
+- Core (14): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.19
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.18- (May, 25 2016)
 - Core (27): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.18
 
