Added security hint + execute permission

--- a/app/translations/en-US/hint.json
+++ b/app/translations/en-US/hint.json
@@ -28,5 +28,38 @@
   "security.users": "A user interacts with the database. To access a database, you need to specify the username and password for the user. Each user has it's own credentials and permissions. For more details about users, visit the <a href='{{users}}' target='_blank'>docs</a>",
   "index.type": "Supported type are : <br> <ul class='indexType'><li><strong>UNIQUE</strong></li><li><strong>NOTUNIQUE</strong></li><li><strong>FULLTEXT</strong></li><li><strong>DICTIONARY</strong></li><li><strong>UNIQUE_HASH_INDEX</strong></li><li><strong>NOTUNIQUE_HASH_INDEX</strong></li><li><strong>NOTUNIQUE_HASH_INDEX</strong></li><li><strong>DICTIONARY_HASH_INDEX</strong></li></ul> For more details about index types, visit the <a href='{{type}}' target='_blank'>docs</a>",
   "index.engine": "Supported engines are : <br> <ul class='indexType'><li><strong>SBTREE</strong></li><li><strong>HASHINDEX</strong></li><li><strong>LUCENE</strong></li></ul> For more details about supported engines, visit the <a href='{{engine}}' target='_blank'>docs</a>",
-  "agent.notFound": "This feature is available in OrientDB Enterprise Edition. To download OrientDB Enterprise Edition (FREE for development) click <a href='{{ee}}' target='_blank'>here</a>."
+  "agent.notFound": "This feature is available in OrientDB Enterprise Edition. To download OrientDB Enterprise Edition (FREE for development) click <a href='{{ee}}' target='_blank'>here</a>.",
+  "agent.pluginsNotFound" : "No plugins installed.",
+  "sec.authentication.allowDefault": "When checked, indicates if a database's default authentication should be allowed in addition to the external authenticators",
+  "sec.kerberos.configFile": "Specifies the location of the krb5.conf file",
+  "sec.kerberos.service.ktname": "Specifies the location of the keytab file used for decrypting OrientDB client service tickets",
+  "sec.kerberos.service.principal": "Specifies the realm user associated with the OrientDB SPN used to decrypt client service tickets",
+  "sec.kerberos.spnego.ktname": "Specifies the location of the keytab file used for decrypting OrientDB SPNEGO service tickets",
+  "sec.kerberos.spnego.principal": "Specifies the realm user associated with the OrientDB SPN used to decrypt SPNEGO service tickets",
+  "sec.kerberos.client.ccname": "If useTicketCache is checked, specifies the location of the local credential cache file",
+  "sec.kerberos.client.ktname": "If useTicketCache is unchecked, specifies the location of the server's client keytab file",
+  "sec.kerberos.client.useTicketCache": "If checked, indicates that the client credential cache should be used, otherwise the client keytab file",
+  "sec.kerberos.client.principal": "Specifies the name of the principal used with the client credentials when accessing the LDAP service",
+  "sec.kerberos.client.renewalPeriod": "Specifies how often the LDAP client service ticket is renewed (in minutes)",
+  "sec.authenticator.Password": "When enabled, provides the same service as the OrientDB server config users section but allows users to be stored in the security.json file",
+  "sec.authenticator.ServerConfig": "When enabled, allows authentication of the users in the OrientDB server config file",
+  "sec.authenticator.SystemAuthenticator": "When enabled, allows authentication of system users in the OrientDB System database",
+  "sec.authenticator.Kerberos": "When enabled, the Kerberos authenticator provides support for Kerberos/SPNEGO authentication",
+  "sec.ldap.period": "Specifies how often the LDAP importer runs (in seconds)",
+  "sec.ldap.database.name": "Specifies the name of the database where the LDAP users will be imported",
+  "sec.ldap.database.ignoreLocal": "When checked, existing database users are preserved during LDAP import",
+  "sec.ldap.database.domain.domain": "Specifies a user-defined name for importing from an LDAP domain",
+  "sec.ldap.database.domain.authenticator": "Specifies which authenticator should be used when authenticating with the LDAP server",
+  "sec.ldap.database.domain.server.url": "Specifies the LDAP server's URL (ldaps is supported)",
+  "sec.ldap.database.domain.server.isAlias": "When checked, the hostname specified in the URL is treated as an alias and the real address is queried followed by a reverse DNS lookup",
+  "sec.ldap.database.domain.user.baseDN": "Specifies the distinguished name of the starting point for the LDAP import",
+  "sec.ldap.database.domain.user.filter": "Specifies the LDAP filter to use for importing users",
+  "sec.ldap.database.domain.user.roles": "Specifies the corresponding OrientDB database roles that will be assigned to each user that is imported from the current LDAP group",
+  "sec.server.createDefaultUsers": "When checked and a new database is created, the default databases users will be created",
+  "sec.passwordValidator.enabled": "When checked and a password is changed, the password will be validated using the specified regular expressions",
+  "sec.passwordValidator.ignoreUUID": "When checked and a password is detected as a valid UUID, password validation is ignored",
+  "sec.passwordValidator.minimumLength": "Defines the minimum number of characters required in the password",
+  "sec.passwordValidator.numberRegex": "Defines the regular expression for the minimum count of required numbers and what symbols are considered numbers",
+  "sec.passwordValidator.upperCaseRegex": "Defines the regular expression for the minimum count of required uppercase characters and what symbols are considered uppercase characters",
+  "sec.passwordValidator.specialRegex": "Defines the regular expression for the minimum count of special characters and what symbols are considered special characters"
 }
