--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.5 - (Jul, 7 2016)
+- Core (12): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.5+is%3Aclosed
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.4 - (Jul, 7 2016)
 - Core (26): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.4+is%3Aclosed
 
