--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.21- (Aug, 10 2016)
+- Core (1): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.21
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.20- (Jul, 22 2016)
 - Core (11): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.20
 
