--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.7 - (Aug, 11 2016)
+- Core (16): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.7+is%3Aclosed
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.6 - (Jul, 27 2016)
 - Core (5): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.6+is%3Aclosed
 
