--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.9 - (Sep, 8 2016)
+- Core (15): https://github.com/orientechnologies/orientdb/issues?q=is%3Aopen+is%3Aissue+milestone%3A2.2.9
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.8 - (Aug, 24 2016)
 - Core (12): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.2.8+is%3Aclosed
 
