--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.24- (Sep, 16 2016)
+- Core (1): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.24
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.23- (Sep, 1 2016)
 - Core (3): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.23
 
