--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.11 - (Oct, 3 2016)
+- Core (38): https://github.com/orientechnologies/orientdb/issues?q=is%3Aclosed+is%3Aissue+milestone%3A2.2.11
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.10 - (Sep, 15 2016)
 - Core (12): https://github.com/orientechnologies/orientdb/issues?q=is%3Aclosed+is%3Aissue+milestone%3A2.2.10
 
