--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.12 - (Oct, 20 2016)
+- Core (18): https://github.com/orientechnologies/orientdb/issues?q=is%3Aissue+is%3Aclosed+milestone%3A2.2.12
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.11 - (Oct, 3 2016)
 - Core (38): https://github.com/orientechnologies/orientdb/issues?q=is%3Aclosed+is%3Aissue+milestone%3A2.2.11
 
