--- a/history.txt
+++ b/history.txt
@@ -27,6 +27,10 @@
 This document contains the last changes of OrientDB Community Edition.
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.1.25- (Nov, 2 2016)
+- Core (8): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.25
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.1.24- (Sep, 16 2016)
 - Core (1): https://github.com/orientechnologies/orientdb/issues?q=milestone%3A2.1.24
 
