--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,10 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.14 - (Dec, 19 2016)
+- Core (32): https://github.com/orientechnologies/orientdb/issues?q=is%3Aissue+is%3Aclosed+milestone%3A2.2.14
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.13 - (Nov, 15 2016)
 - Core (34): https://github.com/orientechnologies/orientdb/issues?q=is%3Aissue+is%3Aclosed+milestone%3A2.2.13
 
