--- a/history.txt
+++ b/history.txt
@@ -28,6 +28,11 @@ This document contains the last changes of OrientDB Community Edition.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------
+VERSION 2.2.16 - (Feb, 02 2017)
+- Release Notes: https://github.com/orientechnologies/orientdb/wiki/OrientDB-2.2-Release-Notes#2216
+- Issues: https://github.com/orientechnologies/orientdb/issues?q=is%3Aissue+milestone%3A2.2.15+is%3Acloseda
+
+-----------------------------------------------------------------------------------------------------------------------------------
 VERSION 2.2.15 - (Jan, 18 2017)
 - Core (28): https://github.com/orientechnologies/orientdb/issues?q=is%3Aissue+milestone%3A2.2.15+is%3Acloseda
 
